# upskill-30-day-design-challenge

./: .gitignore  README.md  after.py  after_v0.py  events.db  pyproject.toml
01-kiss/: README.md  after_v1.py
03-decoupling/after/: bank.py  main.py
04-dry/: README.md  after.py  pyproject.toml
05-string-formatting/: README.md  after.py  after_v2.py
09-plugins/: README.md
09-plugins/after/: plugin_manager.py  pyproject.toml
1-kiss/: README.md  after_v2.py  pyproject.toml
1-kiss/tests/: test_count_fruits.py
10-functional/: functional_v1.py  functional_v2.py  pyproject.toml
11-cohesion/: after.py  before.py  pyproject.toml
12-mvp/after/: gui_MVP.py  pyproject.toml
13-inheritance/: after.py  pyproject.toml
14-abstraction/: after.py  before.py  pyproject.toml
15-higher-order-functions/: after.py  before.py  pyproject.toml
16-config/: after.py  before.py  config.json  pyproject.toml
17-concurrency/after/: main_v2.py  pyproject.toml  req_http.py
17-concurrency/before/: main.py
18-refactoring/after/: pyproject.toml  texts.json  weather_cli_improved.py
18-strategy/: pyproject.toml
19-itertools/: after.py  pyproject.toml
2-type-annotations/: README.md  after.py  pyproject.toml
20-inappropriate-intimacy/: after.py  pyproject.toml
21-undo_redo/: after.py  after_v2.py  pyproject.toml
22-sql-orm/after/: db.py  main.py  models.py  use_api.py
22-sql-orm/before/: pyproject.toml
23-unit-tests/: pyproject.toml  test_api.py
24-unit-tests-advanced/after/: main.py  test_api.py
24-unit-tests-advanced/before/: pyproject.toml
25-ops-layer/after/: after.py  main.py  operations.py
25-ops-layer/before/: pyproject.toml
29-bridge/: after.py  pyproject.toml
3-decoupling/: README.md
3-decoupling/before/: pyproject.toml
30-mixins/: after.py  pyproject.toml
5-string-formatting/: pyproject.toml
6-demeter/: README.md  after.py  pyproject.toml
7/: pyproject.toml
7-hardcoding/: README.md  after.py
8-strategy-pattern/: README.md  after.py
tests/: test_count_fruits.py
(+14 files in other folders)
