[tool.poetry]
name = "upskill-kiss"
version = "0.1.0"
description = ""
authors = ["Hud Wahab <hudwahab@gmail.com>"]
readme = "README.md"
packages = [{include = "upskill_kiss"}]

[tool.poetry.dependencies]
python = "^3.11.4"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
