[tool.poetry]
name = "string_formatting"
version = "0.1.0"
description = ""
authors = ["Hud Wahab <hudwahab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
